--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,21 @@
   to = "/.netlify/functions/demo-send"
   status = 200
 
+[[redirects]]
+  from = "/api/onboarding"
+  to = "/.netlify/functions/onboarding"
+  status = 200
+
+[[redirects]]
+  from = "/api/stripe/create-checkout-session"
+  to = "/.netlify/functions/stripe-create-checkout-session"
+  status = 200
+
+[[redirects]]
+  from = "/api/stripe/webhook"
+  to = "/.netlify/functions/stripe-webhook"
+  status = 200
+
 # SPA fallback for client-side routing
 [[redirects]]
   from = "/*"
