Fix demo SMS functionality and update Calendly links
- Fixed internal server error by enabling API routes in development mode
- Updated Make webhook to send only phone number for demo
- Updated all booking links to point to correct Calendly URL
- Simplified sample booking link generation to use Calendly directly
- Updated environment configuration with proper Calendly URL

--- a/env.example
+++ b/env.example
@@ -17,15 +17,14 @@ STRIPE_PRICE_PRO_ANNUAL=price_***
 STRIPE_PRICE_SCALE_ANNUAL=price_***
 
 # Demo SMS Configuration
-DEMO_SEND_MODE=twilio
-TWILIO_ACCOUNT_SID=AC***
-TWILIO_AUTH_TOKEN=***
-TWILIO_MESSAGING_SERVICE_SID=MG***
-TWILIO_DEMO_FROM=+1XXXXXXXXXX
-MAKE_WEBHOOK_URL=https://hook.make.com/xxxx
+DEMO_SEND_MODE=make
+TELNYX_API_KEY=KEY***
+TELNYX_MESSAGING_PROFILE_ID=***
+TELNYX_FROM_NUMBER=+1XXXXXXXXXX
+MAKE_WEBHOOK_URL=https://hook.us2.make.com/u19m7fkq499gyaqlip9ijbsw8rb841fv
 
 # Scheduling Configuration
-CALENDLY_URL=https://calendly.com/yourlink/intro
+CALENDLY_URL=https://calendly.com/daniel-sheehan03/missed2booked-com
 CALCOM_URL=
 
 # Analytics (optional)
